syntax = "proto3";

package api.cart.v1;

import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "kratos-admin/api/cart/v1;v1";
option java_multiple_files = true;
option java_package = "api.cart.v1";

service Cart {
	// 添加sku到购物车
	rpc AddItem (AddItemRequest) returns (AddItemReply){
		option (google.api.http) = {
			post: "/v1/cart"
			body: "*"
		};
	};
	// 删除购物车中sku
	rpc DeleteItem(DeleteItemRequest) returns (DeleteItemReply){
		option (google.api.http) = {
			delete: "/v1/cart/{product_id}/{product_sku_id}"
		};
	};
	// 获取购物车商品列表
	rpc GetCartList(GetCartListRequest) returns (GetCartListReply){
		option (google.api.http) = {
			get: "/v1/cart"
		};
	};
	// 更新购物车商品数量
	rpc UpdateItemQuantity(UpdateItemQuantityRequest) returns (UpdateItemQuantityReply){
		option (google.api.http) = {
			put: "/v1/cart/{product_id}/{product_sku_id}"
			body: "*"
		};
	};
	// 清空购物车
	rpc ClearCart(ClearCartRequest) returns (ClearCartReply){
		option (google.api.http) = {
			delete: "/v1/cart"
		};
	};
}
message CartProductSku {// 商品sku
	int64       product_sku_id = 1;// sku id
	int64       count = 2;// 数量
}
message AddItemRequest {
	int64       product_id = 1[(validate.rules).int64 = {gt: 0}];// 商品id
	int64       product_sku_id = 2[(validate.rules).int64 = {gt: 0}];// 商品sku id
	int64       shop_id = 3;// 店铺id
	int64       count = 4;
}
message AddItemReply {}

message DeleteItemRequest{
	int64 product_id = 1[(validate.rules).int64 = {gt: 0}];
	int64 product_sku_id = 2[(validate.rules).int64 = {gt: 0}];
}

message DeleteItemReply {}

message GetCartListRequest{
	int64 member_id = 1[(validate.rules).int64 = {gt: 0}];
}
message GetCartListReply {
	repeated CartProductSku list = 1;
}

message UpdateItemQuantityRequest{
	int64 product_id = 1[(validate.rules).int64 = {gt: 0}];
	int64 product_sku_id = 2[(validate.rules).int64 = {gt: 0}];
	int64 count = 3;
}
message UpdateItemQuantityReply {}

message ClearCartRequest{
}
message ClearCartReply {}